--- a/XamlAnimatedGif.Demo/XamlAnimatedGif.Demo.csproj
+++ b/XamlAnimatedGif.Demo/XamlAnimatedGif.Demo.csproj
@@ -1,34 +1,34 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
 
-  <PropertyGroup>
-    <TargetFrameworks>net45;netcoreapp3.1;net5.0-windows</TargetFrameworks>
-    <OutputType>WinExe</OutputType>
-    <UseWPF>true</UseWPF>
-    <SignAssembly>true</SignAssembly>
-    <AssemblyOriginatorKeyFile>../XamlAnimatedGif/XamlAnimatedGif.snk</AssemblyOriginatorKeyFile>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFrameworks>net48;net6.0-windows;net7.0-windows;net8.0-windows;net9.0-windows</TargetFrameworks>
+		<OutputType>WinExe</OutputType>
+		<UseWPF>true</UseWPF>
+		<SignAssembly>true</SignAssembly>
+		<AssemblyOriginatorKeyFile>../XamlAnimatedGif/XamlAnimatedGif.snk</AssemblyOriginatorKeyFile>
+	</PropertyGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'net45'">
-    <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
-    <Reference Include="WindowsBase" />
-    <Reference Include="System.Xaml" />
-    <Reference Include="System.Net.Http" />
-  </ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'net48'">
+		<Reference Include="WindowsBase" />
+		<Reference Include="System.Xaml" />
+		<Reference Include="System.Net.Http" />
+		<Reference Include="PresentationCore" />
+		<Reference Include="PresentationFramework" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="../XamlAnimatedGif/XamlAnimatedGif.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="../XamlAnimatedGif/XamlAnimatedGif.csproj" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <Resource Include="Images/*" Exclude="Images/siteoforigin.gif" />
-    <Content Include="Images/siteoforigin.gif">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-  </ItemGroup>
+	<ItemGroup>
+		<Resource Include="Images/*" Exclude="Images/siteoforigin.gif" />
+		<Content Include="Images/siteoforigin.gif">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+	</ItemGroup>
 
 </Project>
